--- a/formValidation.html
+++ b/formValidation.html
@@ -33,7 +33,39 @@
 
             <p>
                 <label for="zipCode">Zip Code:</label>
+                    <input type="number" id="zipCode" name="zipCode" required>
+            </p>
 
+            <p>
+                <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required inputmode="email">
+            </p>
+
+            <p>
+                <label for="sex">Sex:</label>
+                    <label for="male">Male</label>
+                    <input type="radio" id="sex" name="sex" required>
+
+                    <label for="female">Female</label>
+                    <input type="radio" id="sex" name="sex" required>
+            </p>
+
+            <p> 
+                <label for="language">Language:</label>
+                     <label for="english">English</label>
+                        <input type="checkbox" checked id="language" name="language" required>
+                     <label for="nonEnglish">Non English</label>
+                        <input type="checkbox" id="language" name="language" required>
+            </p>
+            
+            <p>
+                <label for="about">About:</label>
+                        <textarea>
+                        </textarea>
+            </p>
+
+            <p>
+                <input type="submit">
             </p>
 
         </form>
